--- a/src/sohome_client/pubspec.yaml
+++ b/src/sohome_client/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
+  go_router: ^15.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.20.2
